--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
-.App{
+.container {
   display: flex;
   flex-direction: column;
-  
-  width: 500px;
-  margin: 0 auto;
-  
-  gap: 20px;
+  margin: 10px;
+
+  max-width: 808px;
+  min-width: 404px;
 }
