--- a/src/componenent/Header.css
+++ b/src/componenent/Header.css
@@ -1,3 +1,8 @@
-.Header h1{
-    color: rgb(37, 147, 255);
+.Header {
+  text-align: center;
+  padding: 24px 16px;
+}
+.Header span {
+  color: gray;
+  font-weight: bold;
 }
