--- a/src/componenent/TodoItem.css
+++ b/src/componenent/TodoItem.css
@@ -1,21 +1,31 @@
-.TodoItem{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    padding: 15px;
-    
+.TodoItem {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  height: 60px;
+
+  border: 1px solid rgb(220, 220, 220);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 15px;
 }
-.TodoItem .content{
-    flex :1;
+.TodoItem .content {
+  flex: 1;
 }
-.TodoItem .date_time{
-    color: gray;
+.TodoItem .date_time {
+  color: gray;
+  font-size: small;
 }
-.TodoItem button{
-    width: 60px;
-    cursor: pointer;
-    background-color:  rgb(220, 220, 220);
-    color: white;
-    border: none;
-    border-radius: 5px;
+.TodoItem .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 80%;
+  cursor: pointer;
+  color: black;
+  font-size: 24px;
+  padding: 4px 14px;
+  background-color: rgb(220, 220, 220);
+  border-radius: 15px;
 }
